@@ -19,6 +19,7 @@
             Improve SD card reliability on all boards by trying to initialise multiple times before failing
             Added Graphics.scroll command to scroll graphics contents
             Added 'Terminal' class with built-in VT100 terminal
+            Tweak Espruino logo to be exactly 32 chars wide
   
      1v95 : nRF5x: Swap to UART fifo to avoid overrun errors at high baud rates
             Ensure Exceptions/errors are reported on a blank line
